--- a/src/components/common/slideview/slideview.css
+++ b/src/components/common/slideview/slideview.css
@@ -1,6 +1,5 @@
 .button__bar {
-  display: inline-block;
-  vertical-align: middle;
+  display: block;
   margin: auto;
   padding: 0.5rem;
   background: rgba(255, 255, 255, 0.3);
