--- a/src/components/common/slideview/slideview.css
+++ b/src/components/common/slideview/slideview.css
@@ -7,6 +7,7 @@
   width: max-content;
   text-align: center;
   z-index: 0;
+  transform: translateY(-1rem);
 }
 
 .button__bar li {
@@ -14,7 +15,6 @@
   cursor: pointer;
   display: inline-block;
   margin: 0 3px;
-  padding: 0;
 }
 
 .button__bar li button {
