fixed react-slick cloning bug

--- a/src/components/layouts/public/News/NewsSlider/slideview.css
+++ b/src/components/layouts/public/News/NewsSlider/slideview.css
@@ -31,3 +31,7 @@
 .button__bar li.slick-active button {
   background-color: var(--color-tertiary);
 }
+
+/* .slick-slide {
+  max-width: 30%;
+} */
