all cards are now the same height as the highest

--- a/src/components/layouts/public/News/NewsSlider/slideview.css
+++ b/src/components/layouts/public/News/NewsSlider/slideview.css
@@ -35,3 +35,10 @@
 /* .slick-slide {
   max-width: 30%;
 } */
+/* .slick-track {
+  display: flex !important;
+}
+
+.slick-slide {
+  height: inherit !important;
+} */
