--- a/src/components/layouts/private/Editors/MealsEditor/MealsForms/styles/animations.css
+++ b/src/components/layouts/private/Editors/MealsEditor/MealsForms/styles/animations.css
@@ -4,11 +4,24 @@ Slide from left
 
 .slideFromLeft-enter {
   transform: translateX(-100vw);
+  opacity: 0;
 }
 
 .slideFromLeft-enter-active {
   transform: translateX(0);
-  transition: transform 300ms;
+  opacity: 1;
+  transition: all 300ms linear 300ms;
+}
+
+.slideFromLeft-exit {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.slideFromLeft-exit-active {
+  transform: translateX(100vw);
+  opacity: 0;
+  transition: all 300ms linear;
 }
 
 /*
@@ -17,11 +30,24 @@ Slide from right
 
 .slideFromRight-enter {
   transform: translateX(100vw);
+  opacity: 0;
 }
 
 .slideFromRight-enter-active {
   transform: translateX(0);
-  transition: transform 300ms;
+  opacity: 1;
+  transition: all 300ms linear 300ms;
+}
+
+.slideFromRight-exit {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.slideFromRight-exit-active {
+  transform: translateX(-100vw);
+  opacity: 0;
+  transition: all 300ms linear;
 }
 
 /*
@@ -34,6 +60,7 @@ fade
 .fade-enter-active {
   opacity: 1;
   transform: translateX(0);
+  transition: all 300ms linear 300ms;
 }
 .fade-exit {
   opacity: 1;
@@ -41,4 +68,5 @@ fade
 .fade-exit-active {
   opacity: 0;
   transform: scale(0.9);
+  transition: all 300ms linear 300ms;
 }
