--- a/src/components/pages/public/OrderPage.css
+++ b/src/components/pages/public/OrderPage.css
@@ -1,13 +1,17 @@
 .orderPage--appear {
+  opacity: 0;
   transform: translateX(-100vw);
 }
 
 .orderPage--appear-active {
   transform: translateX(0);
+  opacity: 1;
+  transition: opacity 1000ms;
   transition: transform 1000ms;
 }
 
 .orderPage--appear-done {
+  opacity: 1;
   transform: translateX(0);
 }
 
