--- a/src/components/public/OrderPage/components/StickyCart/StickyCart.css
+++ b/src/components/public/OrderPage/components/StickyCart/StickyCart.css
@@ -1,4 +1,5 @@
 .sticky-cart--enter {
+  /* display: flex; */
   opacity: 0.00001;
   transform: translateY(5rem);
 }
@@ -24,4 +25,5 @@
 .sticky-cart--exit-done {
   opacity: 0;
   transform: translateY(5rem);
+  /* display: none; */
 }
